--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </a>
 
       <nav class="header-nav">
-        <ul class="header-list">
+        <ul class="header-list list-reset">
           <li class="header-list-item">
             <a href="#hero" class="header-link">
               Home
@@ -53,7 +53,7 @@
         </ul>
       </nav>
 
-      <button class="btn header-btn">
+      <button class="btn-reset btn header-btn">
         Free trial
       </button>
 
@@ -85,14 +85,14 @@
 
     </section>
 
-    <section id="services" class="services">
+    <section id="services" class="section-offset services">
 
       <div class="container">
         <h2 class="section-title services-title">
-
+          Services
         </h2>
         <p class="section-descr services-descr">
-
+          Lionic guides you on&nbsp;making decisions for all aspects of&nbsp;your end-of-life plans.
         </p>
         <ul class="services-items">
           <li class="services-item">
@@ -208,7 +208,7 @@
 
     </section>
 
-    <section id="articles" class="articles">
+    <section id="articles" class="section-offset articles">
 
       <div class="container">
         <h2 class="section-title articles-title">
@@ -284,7 +284,7 @@
 
     </section>
 
-    <section id="clients" class="clients">
+    <section id="clients" class="section-offset clients">
 
       <div class="container">
         <h2 class="section-title clients-title">
@@ -362,7 +362,7 @@
 
     </section>
 
-    <section id="contacts" class="contacts">
+    <section id="contacts" class="section-offset contacts">
 
       <div class="container">
         <h2 class="section-title contacts-title">
