--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 
   <header class="header">
-    <div class="container">
+    <div class="container flex header-container">
 
-      <a href="#" class="header-logo">
+      <a href="#" class="a-zero header-logo">
         <img class="header-logo" src="img/header/logo.svg" alt="Logo">
       </a>
 
       <nav class="header-nav">
-        <ul class="header-list list-reset">
+        <ul class="header-list flex list-reset">
           <li class="header-list-item">
             <a href="#hero" class="header-link">
               Home
@@ -74,7 +74,7 @@
             ut&nbsp;laoreet
             dolore.
           </p>
-          <button class="btn hero-btn">
+          <button class="btn-reset btn hero-btn">
             FREE 30&nbsp;DAY TRIAL
           </button>
           <span class="hero-secure">
@@ -94,7 +94,7 @@
         <p class="section-descr services-descr">
           Lionic guides you on&nbsp;making decisions for all aspects of&nbsp;your end-of-life plans.
         </p>
-        <ul class="services-items">
+        <ul class="list-reset services-items">
           <li class="services-item">
             <svg class="services-item-icon" width="68.000000" height="66.000000" viewBox="0 0 68 66" fill="none"
               xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -214,7 +214,7 @@
         <h2 class="section-title articles-title">
           Articles
         </h2>
-        <ul class="articles-list">
+        <ul class="list-reset articles-list">
           <li class="articles-item">
             <article class="blog-preview">
               <img src="img/articles/1.jpeg" alt="Jurisdiction" class="blog-preview-image">
@@ -290,7 +290,7 @@
         <h2 class="section-title clients-title">
           Clients
         </h2>
-        <ul class="clients-list">
+        <ul class="list-reset clients-list">
           <li class="clients-item">
             <p class="clients-item-descr">
               Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
@@ -369,7 +369,7 @@
           Contacts
         </h2>
         <address class="contacts-address">
-          <ul class="contacts-list">
+          <ul class="list-reset contacts-list">
             <li class="contacts-item">
               <strong class="contacts-item-caption">
                 Visit Us
@@ -421,7 +421,7 @@
         </a>
       </div>
       <div class="footer-nav">
-        <ul class="footer-list">
+        <ul class="list-reset footer-list">
           <li class="footer-item">
             About Us
           </li>
@@ -437,7 +437,7 @@
         </ul>
       </div>
       <div class="footer-social">
-        <ul class="footer-social-list">
+        <ul class="list-reset footer-social-list">
           <li class="footer-social-item">
             <a href="#" class="footer-social-link">
               <svg class="footer-social-image" width="18.000000" height="14.000000" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg"
