creating bases styles block clients

--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
         <h2 class="section-title clients-title">
           Clients
         </h2>
-        <ul class="list-reset clients-list">
-          <li class="clients-item">
+        <ul class="list-reset clients-list flex">
+          <li class="clients-item flex">
             <p class="clients-item-descr">
               Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
               illum dolore
@@ -299,7 +299,7 @@
               blandit odio
               dignissim qui blandit molestie consequat.
             </p>
-            <div class="clients-user">
+            <div class="clients-user flex">
               <div class="clients-avatar">
                 <img src="img/clients/1.jpg" alt="John Armstrong" class="clients-avatar-image">
               </div>
@@ -313,7 +313,7 @@
               </div>
             </div>
           </li>
-          <li class="clients-item">
+          <li class="clients-item flex">
             <p class="clients-item-descr">
               Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
               illum dolore
@@ -321,7 +321,7 @@
               blandit odio
               dignissim qui blandit molestie consequat.
             </p>
-            <div class="clients-user">
+            <div class="clients-user flex">
               <div class="clients-avatar">
                 <img src="img/clients/2.jpg" alt="Elizabeth Martin" class="clients-avatar-image">
               </div>
@@ -335,7 +335,7 @@
               </div>
             </div>
           </li>
-          <li class="clients-item">
+          <li class="clients-item flex">
             <p class="clients-item-descr">
               Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
               illum dolore
@@ -343,7 +343,7 @@
               blandit odio
               dignissim qui blandit molestie consequat.
             </p>
-            <div class="clients-user">
+            <div class="clients-user flex">
               <div class="clients-avatar">
                 <img src="img/clients/3.jpg" alt="Robin Soutby" class="clients-avatar-image">
               </div>
