--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
           Contacts
         </h2>
         <address class="contacts-address">
-          <ul class="list-reset contacts-list">
-            <li class="contacts-item">
+          <ul class="list-reset contacts-list flex">
+            <li class="contacts-item flex">
               <strong class="contacts-item-caption">
                 Visit Us
               </strong>
@@ -378,18 +378,18 @@
                 Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit.
               </p>
             </li>
-            <li class="contacts-item">
+            <li class="contacts-item flex">
               <strong class="contacts-item-caption">
                 Call Us
               </strong>
               <a href="tel:+79876543210" class="contacts-link">
                 +7 (987) 654-32-10
               </a>
-              <a href="tel:+79876543210" class="contacts-link">
-                +7 (987) 654-32-10
+              <a href="tel:+71234567890" class="contacts-link">
+                +7 (123) 456-78-90
               </a>
             </li>
-            <li class="contacts-item">
+            <li class="contacts-item flex">
               <strong class="contacts-item-caption">
                 Email Us
               </strong>
@@ -414,14 +414,14 @@
 
   <footer class="footer">
 
-    <div class="container">
-      <div class="footer-logo">
+    <div class="container flex footer-container">
+      <div class="footer-logo flex">
         <a href="#" class="footer-link">
           <img src="img/footer/logo.svg" alt="Логотип" class="footer-logo-image">
         </a>
       </div>
       <div class="footer-nav">
-        <ul class="list-reset footer-list">
+        <ul class="list-reset footer-list flex">
           <li class="footer-item">
             About Us
           </li>
@@ -437,7 +437,7 @@
         </ul>
       </div>
       <div class="footer-social">
-        <ul class="list-reset footer-social-list">
+        <ul class="list-reset footer-social-list flex">
           <li class="footer-social-item">
             <a href="#" class="footer-social-link">
               <svg class="footer-social-image" width="18.000000" height="14.000000" viewBox="0 0 18 14" fill="none"
