--- a/index.html
+++ b/index.html
@@ -419,89 +419,95 @@
         <a href="#" class="footer-link">
           <img src="img/footer/logo.svg" alt="Логотип" class="footer-logo-image">
         </a>
+        <p class="footer-logo-text">
+          Copyright &copy;2017. All Right Reserved
+        </p>
       </div>
-      <div class="footer-nav">
-        <ul class="list-reset footer-list flex">
-          <li class="footer-item">
-            About Us
-          </li>
-          <li class="footer-item">
-            Contact Us
-          </li>
-          <li class="footer-item">
-            Privacy Policy
-          </li>
-          <li class="footer-item">
-            Terms Condition
-          </li>
-        </ul>
-      </div>
-      <div class="footer-social">
-        <ul class="list-reset footer-social-list flex">
-          <li class="footer-social-item">
-            <a href="#" class="footer-social-link">
-              <svg class="footer-social-image" width="18.000000" height="14.000000" viewBox="0 0 18 14" fill="none"
-                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <desc>
-                  Created with Pixso.
-                </desc>
-                <defs>
-                  <clipPath id="clip9_2">
-                    <rect rx="-0.500000" width="17.000000" height="13.000000" transform="translate(0.500000 0.500000)"
-                      fill="white" fill-opacity="0" />
-                  </clipPath>
-                </defs>
-                <rect rx="-0.500000" width="17.000000" height="13.000000" transform="translate(0.500000 0.500000)"
-                  fill="#FFFFFF" fill-opacity="0" />
-                <g clip-path="url(#clip9_2)">
+      <div class="footer-right flex">
+        <div class="footer-nav">
+          <ul class="list-reset footer-list flex">
+            <li class="footer-item">
+              About Us
+            </li>
+            <li class="footer-item">
+              Contact Us
+            </li>
+            <li class="footer-item">
+              Privacy Policy
+            </li>
+            <li class="footer-item">
+              Terms Condition
+            </li>
+          </ul>
+        </div>
+        <div class="footer-social">
+          <ul class="list-reset footer-social-list flex">
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg class="footer-social-image" width="18.000000" height="14.000000" viewBox="0 0 18 14" fill="none"
+                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <desc>
+                    Created with Pixso.
+                  </desc>
+                  <defs>
+                    <clipPath id="clip9_2">
+                      <rect rx="-0.500000" width="17.000000" height="13.000000" transform="translate(0.500000 0.500000)"
+                        fill="white" fill-opacity="0" />
+                    </clipPath>
+                  </defs>
+                  <rect rx="-0.500000" width="17.000000" height="13.000000" transform="translate(0.500000 0.500000)"
+                    fill="#FFFFFF" fill-opacity="0" />
+                  <g clip-path="url(#clip9_2)">
+                    <path
+                      d="M17.71 1.65C17.06 1.93 16.36 2.12 15.63 2.21C16.38 1.77 16.95 1.08 17.22 0.25C16.51 0.66 15.73 0.95 14.92 1.11C14.25 0.42 13.31 0 12.26 0C10.26 0 8.63 1.58 8.63 3.53C8.63 3.81 8.66 4.08 8.72 4.33C5.7 4.19 3.02 2.78 1.23 0.64C0.92 1.16 0.74 1.77 0.74 2.42C0.74 3.64 1.38 4.73 2.35 5.36C1.78 5.34 1.21 5.19 0.71 4.92L0.71 4.96C0.71 6.68 1.96 8.1 3.62 8.43C3.32 8.51 3 8.55 2.67 8.55C2.43 8.55 2.2 8.53 1.98 8.49C2.44 9.89 3.79 10.91 5.38 10.94C4.13 11.89 2.57 12.46 0.86 12.46C0.57 12.46 0.28 12.44 0 12.41C1.6 13.41 3.51 14 5.57 14C12.25 14 15.91 8.61 15.91 3.94C15.91 3.79 15.91 3.63 15.9 3.48C16.61 2.98 17.23 2.36 17.71 1.65Z"
+                      fill="#000000" fill-opacity="1.000000" fill-rule="nonzero" />
+                  </g>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg class="footer-social-image" width="17.000000" height="16.000000" viewBox="0 0 17 16" fill="none"
+                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <desc>
+                    Created with Pixso.
+                  </desc>
+                  <defs>
+                    <clipPath id="clip9_0">
+                      <rect rx="-0.500000" width="16.000000" height="15.000000" transform="translate(0.500000 0.500000)"
+                        fill="white" fill-opacity="0" />
+                    </clipPath>
+                  </defs>
+                  <rect rx="-0.500000" width="16.000000" height="15.000000" transform="translate(0.500000 0.500000)"
+                    fill="#FFFFFF" fill-opacity="0" />
+                  <g clip-path="url(#clip9_0)">
+                    <path
+                      d="M3.85 15.99L3.85 5.2L0.21 5.2L0.21 15.99L3.85 15.99ZM2.03 3.72C3.3 3.72 4.09 2.9 4.09 1.86C4.07 0.8 3.3 -0.01 2.06 -0.01C0.81 -0.01 0 0.8 0 1.86C0 2.9 0.79 3.72 2.01 3.72L2.03 3.72L2.03 3.72ZM5.87 15.99L9.52 15.99L9.52 9.97C9.52 9.64 9.54 9.32 9.64 9.09C9.9 8.45 10.5 7.78 11.51 7.78C12.83 7.78 13.35 8.77 13.35 10.22L13.35 15.99L17 15.99L17 9.8C17 6.49 15.2 4.95 12.8 4.95C10.84 4.95 9.97 6.03 9.49 6.76L9.52 6.76L9.52 5.2L5.87 5.2C5.92 6.21 5.87 15.99 5.87 15.99L5.87 15.99Z"
+                      fill="#000000" fill-opacity="1.000000" fill-rule="nonzero" />
+                  </g>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="#" class="footer-social-link">
+                <svg class="footer-social-image" width="24.000000" height="18.000000" viewBox="0 0 24 18" fill="none"
+                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <desc>
+                    Created with Pixso.
+                  </desc>
+                  <defs />
                   <path
-                    d="M17.71 1.65C17.06 1.93 16.36 2.12 15.63 2.21C16.38 1.77 16.95 1.08 17.22 0.25C16.51 0.66 15.73 0.95 14.92 1.11C14.25 0.42 13.31 0 12.26 0C10.26 0 8.63 1.58 8.63 3.53C8.63 3.81 8.66 4.08 8.72 4.33C5.7 4.19 3.02 2.78 1.23 0.64C0.92 1.16 0.74 1.77 0.74 2.42C0.74 3.64 1.38 4.73 2.35 5.36C1.78 5.34 1.21 5.19 0.71 4.92L0.71 4.96C0.71 6.68 1.96 8.1 3.62 8.43C3.32 8.51 3 8.55 2.67 8.55C2.43 8.55 2.2 8.53 1.98 8.49C2.44 9.89 3.79 10.91 5.38 10.94C4.13 11.89 2.57 12.46 0.86 12.46C0.57 12.46 0.28 12.44 0 12.41C1.6 13.41 3.51 14 5.57 14C12.25 14 15.91 8.61 15.91 3.94C15.91 3.79 15.91 3.63 15.9 3.48C16.61 2.98 17.23 2.36 17.71 1.65Z"
-                    fill="#000000" fill-opacity="1.000000" fill-rule="nonzero" />
-                </g>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a href="#" class="footer-social-link">
-              <svg class="footer-social-image" width="17.000000" height="16.000000" viewBox="0 0 17 16" fill="none"
-                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <desc>
-                  Created with Pixso.
-                </desc>
-                <defs>
-                  <clipPath id="clip9_0">
-                    <rect rx="-0.500000" width="16.000000" height="15.000000" transform="translate(0.500000 0.500000)"
-                      fill="white" fill-opacity="0" />
-                  </clipPath>
-                </defs>
-                <rect rx="-0.500000" width="16.000000" height="15.000000" transform="translate(0.500000 0.500000)"
-                  fill="#FFFFFF" fill-opacity="0" />
-                <g clip-path="url(#clip9_0)">
-                  <path
-                    d="M3.85 15.99L3.85 5.2L0.21 5.2L0.21 15.99L3.85 15.99ZM2.03 3.72C3.3 3.72 4.09 2.9 4.09 1.86C4.07 0.8 3.3 -0.01 2.06 -0.01C0.81 -0.01 0 0.8 0 1.86C0 2.9 0.79 3.72 2.01 3.72L2.03 3.72L2.03 3.72ZM5.87 15.99L9.52 15.99L9.52 9.97C9.52 9.64 9.54 9.32 9.64 9.09C9.9 8.45 10.5 7.78 11.51 7.78C12.83 7.78 13.35 8.77 13.35 10.22L13.35 15.99L17 15.99L17 9.8C17 6.49 15.2 4.95 12.8 4.95C10.84 4.95 9.97 6.03 9.49 6.76L9.52 6.76L9.52 5.2L5.87 5.2C5.92 6.21 5.87 15.99 5.87 15.99L5.87 15.99Z"
-                    fill="#000000" fill-opacity="1.000000" fill-rule="nonzero" />
-                </g>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a href="#" class="footer-social-link">
-              <svg class="footer-social-image" width="24.000000" height="18.000000" viewBox="0 0 24 18" fill="none"
-                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <desc>
-                  Created with Pixso.
-                </desc>
-                <defs />
-                <path
-                  d="M21.6 0L2.4 0C1.07 0 0 1.01 0 2.25L0 15.75C0 16.98 1.07 18 2.4 18L21.6 18C22.92 18 24 16.98 24 15.75L24 2.25C24 1.01 22.92 0 21.6 0ZM2.4 1L21.6 1Q21.79 1 21.97 1.04Q22.06 1.06 22.16 1.1Q22.33 1.17 22.48 1.28Q22.54 1.33 22.61 1.39Q22.76 1.53 22.86 1.72Q22.88 1.75 22.89 1.78Q22.95 1.91 22.98 2.04Q23 2.14 23 2.25L23 15.75Q23 15.85 22.98 15.95Q22.95 16.08 22.89 16.21Q22.88 16.24 22.86 16.27Q22.76 16.46 22.61 16.6Q22.54 16.66 22.48 16.71Q22.33 16.82 22.16 16.89Q22.06 16.93 21.97 16.95Q21.79 17 21.6 17L2.4 17Q2.2 17 2.02 16.95Q1.93 16.93 1.83 16.89Q1.66 16.82 1.51 16.71Q1.45 16.66 1.38 16.6Q1.23 16.46 1.13 16.27Q1.11 16.24 1.1 16.21Q1.04 16.08 1.01 15.95Q1 15.85 1 15.75L1 2.25Q1 2.14 1.01 2.04Q1.04 1.91 1.1 1.78Q1.11 1.75 1.13 1.72Q1.23 1.53 1.38 1.39Q1.45 1.33 1.51 1.28Q1.66 1.17 1.83 1.1Q1.93 1.06 2.02 1.04Q2.2 1 2.4 1Z"
-                  fill="#000000" fill-opacity="1.000000" fill-rule="evenodd" />
-                <path d="M22.84 1.06L12 9.93L1.15 1.06" stroke="#000000" stroke-opacity="1.000000"
-                  stroke-width="1.000000" stroke-linejoin="round" stroke-linecap="round" />
-              </svg>
-            </a>
-          </li>
-        </ul>
+                    d="M21.6 0L2.4 0C1.07 0 0 1.01 0 2.25L0 15.75C0 16.98 1.07 18 2.4 18L21.6 18C22.92 18 24 16.98 24 15.75L24 2.25C24 1.01 22.92 0 21.6 0ZM2.4 1L21.6 1Q21.79 1 21.97 1.04Q22.06 1.06 22.16 1.1Q22.33 1.17 22.48 1.28Q22.54 1.33 22.61 1.39Q22.76 1.53 22.86 1.72Q22.88 1.75 22.89 1.78Q22.95 1.91 22.98 2.04Q23 2.14 23 2.25L23 15.75Q23 15.85 22.98 15.95Q22.95 16.08 22.89 16.21Q22.88 16.24 22.86 16.27Q22.76 16.46 22.61 16.6Q22.54 16.66 22.48 16.71Q22.33 16.82 22.16 16.89Q22.06 16.93 21.97 16.95Q21.79 17 21.6 17L2.4 17Q2.2 17 2.02 16.95Q1.93 16.93 1.83 16.89Q1.66 16.82 1.51 16.71Q1.45 16.66 1.38 16.6Q1.23 16.46 1.13 16.27Q1.11 16.24 1.1 16.21Q1.04 16.08 1.01 15.95Q1 15.85 1 15.75L1 2.25Q1 2.14 1.01 2.04Q1.04 1.91 1.1 1.78Q1.11 1.75 1.13 1.72Q1.23 1.53 1.38 1.39Q1.45 1.33 1.51 1.28Q1.66 1.17 1.83 1.1Q1.93 1.06 2.02 1.04Q2.2 1 2.4 1Z"
+                    fill="#000000" fill-opacity="1.000000" fill-rule="evenodd" />
+                  <path d="M22.84 1.06L12 9.93L1.15 1.06" stroke="#000000" stroke-opacity="1.000000" stroke-width="1.000000"
+                    stroke-linejoin="round" stroke-linecap="round" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
+      
     </div>
 
   </footer>
