--- a/index.html
+++ b/index.html
@@ -295,12 +295,13 @@
         <ul class="list-reset clients-list flex">
           <li class="clients-item flex">
             <p class="clients-item-descr">
-              Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
+              Duis autem vel eum iriure dolor&nbsp;in hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
               illum dolore
               eu&nbsp;feugiat nulla facilisis at&nbsp;vero eros et&nbsp;accumsan et&nbsp;iusto odio dignissim qui
               blandit odio
               dignissim qui blandit molestie consequat.
             </p>
+            <div class="line"></div>
             <div class="clients-user flex">
               <div class="clients-avatar">
                 <img src="img/clients/1.jpg" alt="John Armstrong" class="clients-avatar-image">
@@ -317,12 +318,13 @@
           </li>
           <li class="clients-item flex">
             <p class="clients-item-descr">
-              Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
+              Duis autem vel eum iriure dolor&nbsp;in hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
               illum dolore
               eu&nbsp;feugiat nulla facilisis at&nbsp;vero eros et&nbsp;accumsan et&nbsp;iusto odio dignissim qui
               blandit odio
               dignissim qui blandit molestie consequat.
             </p>
+            <div class="line"></div>
             <div class="clients-user flex">
               <div class="clients-avatar">
                 <img src="img/clients/2.jpg" alt="Elizabeth Martin" class="clients-avatar-image">
@@ -339,12 +341,13 @@
           </li>
           <li class="clients-item flex">
             <p class="clients-item-descr">
-              Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
+              Duis autem vel eum iriure dolor&nbsp;in hendrerit in&nbsp;vulputate velit esse molestie consequat, vel
               illum dolore
               eu&nbsp;feugiat nulla facilisis at&nbsp;vero eros et&nbsp;accumsan et&nbsp;iusto odio dignissim qui
               blandit odio
               dignissim qui blandit molestie consequat.
             </p>
+            <div class="line"></div>
             <div class="clients-user flex">
               <div class="clients-avatar">
                 <img src="img/clients/3.jpg" alt="Robin Soutby" class="clients-avatar-image">
