correction styles contacts

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         </h2>
         <address class="contacts-address">
           <ul class="list-reset contacts-list flex">
-            <li class="contacts-item flex contacts-item-1">
+            <li class="contacts-item flex contacts-item-location">
               <strong class="contacts-item-caption">
                 Visit Us
               </strong>
@@ -383,7 +383,7 @@
                 Duis autem vel eum iriure dolor in&nbsp;hendrerit in&nbsp;vulputate velit.
               </p>
             </li>
-            <li class="contacts-item flex contacts-item-2">
+            <li class="contacts-item flex contacts-item-phone">
               <strong class="contacts-item-caption">
                 Call Us
               </strong>
@@ -394,7 +394,7 @@
                 +7 (123) 456-78-90
               </a>
             </li>
-            <li class="contacts-item flex contacts-item-3">
+            <li class="contacts-item flex contacts-item-mail">
               <strong class="contacts-item-caption">
                 Email Us
               </strong>
