--- a/index.html
+++ b/index.html
@@ -432,16 +432,24 @@
         <div class="footer-nav">
           <ul class="list-reset footer-list flex">
             <li class="footer-item">
-              About Us
+              <a href="#" class="footer-link">
+                About Us
+              </a>
             </li>
             <li class="footer-item">
-              Contact Us
+              <a href="#" class="footer-link">
+                Contact Us
+              </a>
             </li>
             <li class="footer-item">
-              Privacy Policy
+              <a href="#" class="footer-link">
+                Privacy Policy
+              </a>
             </li>
             <li class="footer-item">
-              Terms Condition
+              <a href="#" class="footer-link">
+                Terms Condition
+              </a>
             </li>
           </ul>
         </div>
